[gd_scene load_steps=8 format=2]

[ext_resource path="res://Textures/single_particle.png" type="Texture" id=1]
[ext_resource path="res://Textures/mobile_buttons.png" type="Texture" id=2]
[ext_resource path="res://Scripts/TextureButton.gd" type="Script" id=3]
[ext_resource path="res://Textures/keyboard_hints.png" type="Texture" id=4]
[ext_resource path="res://Textures/button_focus.png" type="Texture" id=5]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0.0685396, 0.0424 ), 0.0, 0.0, 0, 0, Vector2( 0.49301, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.1128 ), -2.18354, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.309963, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[node name="TextureButton" type="TextureButton" groups=[
"ResizableNodes",
]]
margin_left = 200.0
margin_right = 256.0
margin_bottom = 56.0
rect_min_size = Vector2( 56, 56 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 28, 28 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )
vframes = 4
hframes = 4

[node name="ButtonFocus" type="Sprite" parent="Sprite"]
visible = false
show_behind_parent = true
texture = ExtResource( 5 )

[node name="Particles" type="CPUParticles2D" parent="."]
show_behind_parent = true
position = Vector2( 28, 50.4 )
amount = 30
lifetime = 4.0
preprocess = 4.0
texture = ExtResource( 1 )
emission_shape = 2
emission_rect_extents = Vector2( 14, 1 )
direction = Vector2( 0, -1 )
spread = 30.0
gravity = Vector2( 0, 0 )
initial_velocity = 28.0
initial_velocity_random = 0.5
angle = 100.0
angle_random = 0.2
scale_amount = 0.25
scale_amount_curve = SubResource( 1 )
color_ramp = SubResource( 2 )
hue_variation = 1.0
hue_variation_random = 1.0

[node name="Tween" type="Tween" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="KeyboardHint" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )
centered = false
offset = Vector2( -32, 168 )
vframes = 4
hframes = 4
[connection signal="button_down" from="." to="." method="_on_TextureButton_button_down"]
[connection signal="button_up" from="." to="." method="_on_TextureButton_button_up"]
[connection signal="focus_entered" from="." to="." method="_on_TextureButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_TextureButton_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_TextureButton_mouse_exited"]
